# lpi-control-demo

./: README.md  pyproject.toml
examples/: data.pkl  fit_controller.py  fit_ensemble.py  lpi_control_example.py  p_control_example.py  pi_control_example.py  plot_ensemble.py
lpi_control_demo/: __init__.py  lpi_controller.py  model_fitting.py  utility_funcs.py
