[tool.poetry]
name = "lpi-control-demo"
version = "0.1.0"
description = "Some examples demonstrating proportional with a leaky integrator"
authors = ["Will Dickson <wbd@caltech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
scipy = "^1.11.4"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
